tests/suite/fail/generated/types/fail_mul_i32_string.ny
fn main() {
    let _ = 1 * "a" //~ ERROR type mismatch in `arithmetic` operation
}
